--- a/package.json
+++ b/package.json
@@ -1,40 +1,48 @@
 {
   "name": "rollup-bundle",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "clean": "rm -rf dist",
     "build": "rollup -c",
+    "clean": "rm -rf dist",
+    "start": "node dist/bundle.js",
     "typecheck": "tsc --noEmit true",
-    "dev": "nodemon --watch src/** --ext ts --exec ts-node src/index.ts"
+    "lint": "eslint . --quiet --max-warnings 0",
+    "prettify": "prettier --write \"src/**/*.{json,ts,tsx,js,jsx,md,scss,css,html}\"",
+    "dev": "nodemon --watch src/** --ext ts --exec ts-node -r tsconfig-paths/register src/index.ts",
+    "prepare": "husky",
+    "commitlint": "commitlint --edit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "grammy": "^1.30.0",
-    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.1.1",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/express": "^5.0.0",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@types/node": "^22.7.5",
-    "glob": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.6",
     "nodemon": "^3.1.7",
+    "prettier": "^3.3.3",
     "rollup": "^4.24.0",
     "rollup-plugin-delete": "^2.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-tsconfig-paths": "^1.5.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.5.4"
   }
 }
